swagger + validate until user_profile
