# src/app.js
@@ -12,7 +12,8 @@ const booking_router = require('./domains/booking/router')
 const program_router = require('./domains/programs/router')
 const schedule_router = require('./domains/schedules/router')
 const tracker_router = require('./domains/trackers/router')
-    // const user_router = require('./domains/users/router')
+const user_program_router = require('./domains/user_program/router')
+const user_router = require('./domains/users/router')
 
 const swaggerUi = require('swagger-ui-express')
 const swaggerDocument = require('./swagger.json')
@@ -38,7 +39,8 @@ const start = async() => {
     app.use('/programs', program_router)
     app.use('/schedules', schedule_router)
     app.use('/trackers', tracker_router)
-        // app.use('/users', user_router)
+    app.use('/user_programs', user_program_router)
+    app.use('/users', user_router)
 
     app.use('/swagger', swaggerUi.serve, swaggerUi.setup(swaggerDocument))
 
