# src/domains/user_program/router.js
@@ -8,7 +8,10 @@ const get_list_by_user = require('./controllers/get_list_by_user')
 const get_list = require('./controllers/get_list')
 const get_one = require('./controllers/get_one')
 
-router.post('/', create_one)
+const validate = require('../../middleware/check_validate')
+const dataExample = require('./models/validate')
+
+router.post('/', validate(dataExample.create), create_one)
 
 router.get('/', get_list)
 
@@ -16,6 +19,6 @@ router.get('/user/:user_id', get_list_by_user)
 
 router.get('/:id', get_one)
 
-router.delete_one('/:id', delete_one)
+router.delete('/:id', delete_one)
 
-module.exports = routers
+module.exports = router
