# src/swagger.json
@@ -31,6 +31,14 @@
         {
             "name": "trackers",
             "description": "API for trackers in the system"
+        },
+        {
+            "name": "user_programs",
+            "description": "API for user_programs in the system"
+        },
+        {
+            "name": "users",
+            "description": "API for users in the system"
         }
     ],
     "schemes": [
@@ -885,6 +893,302 @@
                     },
                     "439": {
                         "description": "tracker not found"
+                    }
+                }
+            }
+        },
+
+
+        "/user_programs": {
+            "post": {
+                "summary": "Create user_programs",
+                "tags": [
+                    "user_programs"
+                ],
+                "description": "Create user_programs",
+
+                "parameters": [{
+                    "name": "user_program",
+                    "in": "body",
+                    "description": "user_program info",
+                    "schema": {
+                        "type": "object",
+                        "required": [
+                            "user_id",
+                            "time",
+                            "step",
+                            "weight"
+                        ],
+                        "properties": {
+                            "user_id": {
+                                "type": "string",
+                                "example": "ba8f8d01-d500-4f45-ae26-a1b238fadf4c"
+                            },
+                            "time": {
+                                "type": "string"
+                            },
+                            "step": {
+                                "type": "integer"
+                            },
+                            "weight": {
+                                "type": "integer"
+                            }
+                        }
+                    }
+                }],
+                "produces": [
+                    "application/json"
+                ],
+                "responses": {
+                    "200": {
+                        "description": "handler success"
+                    },
+                    "400": {
+                        "description": "validation error"
+                    },
+                    "445": {
+                        "description": "user_program is existed"
+                    }
+                }
+            }
+        },
+        "/user_programs ": {
+            "get": {
+                "summary": "List all user_program",
+                "tags": [
+                    "user_programs"
+                ],
+                "description": "List all user_program in database",
+                "responses": {
+                    "200": {
+                        "description": "handler success"
+                    },
+                    "448": {
+                        "description": ""
+                    }
+                }
+            }
+        },
+        "/user_programs/user/{user_id}": {
+            "get": {
+                "summary": "Get list trackers by user_id",
+                "tags": [
+                    "trackers"
+                ],
+                "parameters": [{
+                    "name": "user_id",
+                    "in": "path",
+                    "description": "user_id",
+                    "type": "string",
+                    "example": "994cb53f-6ef8-40bc-9d78-58ec9ce53ec4"
+                }],
+                "responses": {
+                    "200": {
+                        "description": "handler success"
+                    },
+                    "447": {
+                        "description": ""
+                    }
+                }
+            }
+        },
+        "/user_programs/{id} ": {
+            "get": {
+                "summary": "Get user_program by id",
+                "tags": [
+                    "user_programs"
+                ],
+                "parameters": [{
+                    "name": "id",
+                    "in": "path",
+                    "description": "ID of user_program",
+                    "type": "string",
+                    "example": "e66ae777-0c56-4925-9151-0f1e28b9b4f4"
+                }],
+                "responses": {
+                    "200": {
+                        "description": "handler success"
+                    },
+                    "449": {
+                        "description": "user program not found"
+                    }
+                }
+            }
+        },
+        "/user_programs/{id}  ": {
+            "delete": {
+                "summary": "Delete user_program with id",
+                "tags": [
+                    "user_programs"
+                ],
+                "parameters": [{
+                    "name": "id",
+                    "in": "path",
+                    "example": "8d960b70-bb50-4102-9a89-48c99a4db7b0",
+                    "description": "ID of user_program you want to delete"
+                }],
+                "responses": {
+                    "200": {
+                        "description": "handler success"
+                    },
+                    "446": {
+                        "description": "user program not found"
+                    }
+                }
+            }
+        },
+
+
+        "/users": {
+            "post": {
+                "summary": "Create user",
+                "tags": [
+                    "users"
+                ],
+                "description": "Create user",
+
+                "parameters": [{
+                    "name": "user",
+                    "in": "body",
+                    "description": "user info",
+                    "schema": {
+                        "type": "object",
+                        "required": [
+                            "user_id",
+                            "first_name",
+                            "last_name",
+                            "phone",
+                            "address",
+                            "avatar",
+                            "birthday",
+                            "gender"
+                        ],
+                        "properties": {
+                            "user_id": {
+                                "type": "string",
+                                "example": "ba8f8d01-d500-4f45-ae26-a1b238fadf4c"
+                            },
+                            "first_name": {
+                                "type": "string"
+                            },
+                            "last_name": {
+                                "type": "integer"
+                            },
+                            "phone": {
+                                "type": "integer"
+                            },
+                            "address": {
+                                "type": "string"
+                            },
+                            "avatar": {
+                                "type": "string"
+                            },
+                            "birthday": {
+                                "type": "integer"
+                            },
+                            "gender": {
+                                "type": "integer"
+                            }
+                        }
+                    }
+                }],
+                "produces": [
+                    "application/json"
+                ],
+                "responses": {
+                    "200": {
+                        "description": "handler success"
+                    },
+                    "400": {
+                        "description": "validation error"
+                    },
+                    "451": {
+                        "description": ""
+                    }
+                }
+            }
+        },
+        "/users/{id}": {
+            "put": {
+                "summary": "Update user by id",
+                "tags": [
+                    "users"
+                ],
+                "parameters": [{
+                        "name": "id",
+                        "in": "path",
+                        "description": "ID of user",
+                        "type": "string",
+                        "example": "e66ae777-0c56-4925-9151-0f1e28b9b4f4"
+                    },
+                    {
+                        "name": "user",
+                        "in": "body",
+                        "description": "user info",
+                        "schema": {
+                            "type": "object",
+                            "properties": {
+                                "user_id": {
+                                    "type": "string",
+                                    "example": "ba8f8d01-d500-4f45-ae26-a1b238fadf4c"
+                                },
+                                "first_name": {
+                                    "type": "string"
+                                },
+                                "last_name": {
+                                    "type": "integer"
+                                },
+                                "phone": {
+                                    "type": "integer"
+                                },
+                                "address": {
+                                    "type": "string"
+                                },
+                                "avatar": {
+                                    "type": "string"
+                                },
+                                "birthday": {
+                                    "type": "integer"
+                                },
+                                "gender": {
+                                    "type": "integer"
+                                }
+                            }
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "handler success"
+                    },
+                    "400": {
+                        "description": "validation error"
+                    },
+                    "450": {
+                        "description": ""
+                    }
+                }
+            }
+        },
+        "/users/{id} ": {
+            "get": {
+                "summary": "Get user by id",
+                "tags": [
+                    "users"
+                ],
+                "parameters": [{
+                    "name": "id",
+                    "in": "path",
+                    "description": "ID of user",
+                    "type": "string",
+                    "example": "e66ae777-0c56-4925-9151-0f1e28b9b4f4"
+                }],
+                "responses": {
+                    "200": {
+                        "description": "handler success"
+                    },
+                    "452": {
+                        "description": ""
                     }
                 }
             }
